# tnsbench

./: .env.example  .gitignore  Makefile  README.md  pyproject.toml
scripts/: progress.sh  progress_compare.sh  run_three_agents.sh  run_v07.sh  track.sh  track_v07.sh  track_v13.sh  v19_n5_analysis.py  v19_n5_launch_parallel.sh  v19_n5_postprocess.sh  v19_n5_postprocess_parallel.sh
tests/: test_database.py  test_eval_methodology.py  test_generator_hard_api.py  test_judge_attribution.py  test_live_fp_regressions.py  test_metric_correctness.py  test_report.py  test_runner_smoke.py  test_simulator_scripted.py  test_state_checks.py  test_task_lint.py  test_task_schema.py  test_tools.py
tnsbench/: __init__.py  cli.py
tnsbench/agents/: base.py  llm_agent.py  mock_agents.py  prompts.py  providers.py
tnsbench/core/: config.py  cost.py  ids.py  logging.py  random.py  transcript.py  types.py
tnsbench/env/: database.py  events.py  models.py  overlays.py  retail_data.py  snapshots.py  tau_bench_loader.py
tnsbench/grading/: calibration.py  failure_types.py  grader.py  heuristics.py  llm_judge.py  state_checks.py  transcript_checks.py
tnsbench/policy/: clauses.json  merge.py  policy_loader.py  policy_schema.py  retail_policy.md
tnsbench/runner/: aggregate.py  episode.py  report.py  result.py  run.py
tnsbench/scripts/: build_vendor_data.py  generate_tasks.py  pilot_calibration.py  probe_provider.py  regrade.py  run_smoke.py  select_v08.py  validate_tasks.py
tnsbench/simulators/: base.py  cascading.py  llm_simulator.py  placeholders.py  prompts.py  scripted.py  (+1 more)
(+16 files in other folders)
