[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "tnsbench"
version = "0.1.0"
description = "TnSBench: a trust-and-safety benchmark for tool-using customer-support agents under adversarial pressure."
readme = "README.md"
requires-python = ">=3.9"
authors = [{ name = "TnSBench" }]
dependencies = [
    "pydantic>=2.0",
    "typer>=0.9",
    "rich>=13.0",
    "python-dotenv>=1.0",
]

[project.optional-dependencies]
test = ["pytest>=8.0"]

[project.scripts]
tnsbench = "tnsbench.cli:app"

[tool.setuptools]
packages = ["tnsbench"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
